--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "Matschik <mathieu.schimmerling@protonmail.com>",
   "license": "MIT",
   "dependencies": {
-    "fastify": "^4.25.1"
+    "@prisma/client": "^5.7.1",
+    "@simplewebauthn/server": "^8.3.5",
+    "fastify": "^4.25.1",
+    "fastify-prisma-client": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
@@ -20,7 +23,9 @@
     "fastify-tsconfig": "^2.0.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
+    "prisma": "^5.7.1",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
